# FreeAlgebra

./: .gitignore  CMakeLists.txt  Cargo.toml  main copy.cpp  main.cpp  pyproject.toml  readme.md  test.ipynb  tips.sh
include/: Automorphism.h  BaseAlgebraRelations.h  CMakeLists copy.txt  Elements.h  Fermions.h  FinitePowerAlgebras.h  ProductPowerAlgebra.h  complex.h  utils.h
python/: test.ipynb
python/algebra/: __init__.py
python/tests/: test_all.py
src/: BaseAlgebraRelations.h  CMakeLists.txt  Elements.h  FinitePowerAlgebras.h  algebras.h  dirac.h  element.h  freealgebra copy.cpp  freealgebra.cpp  lib.rs  test.cpp  utils.h
tests/: test_elements.cpp  test_fermions.cpp  test_finitealgebras.cpp
